Write almost the whole article.

--- a/h3.md
+++ b/h3.md
@@ -441,7 +441,7 @@ bash-completion:
 bash: micro: command not found
 ````
 
-Also, hitting the tab still did complete bash command  in the cli after I restarted the terminal, so I executed my state just to see would it imply changes.
+Also, hitting the tab still did complete bash command in the cli after I restarted the terminal, so I executed my state just to see would it imply changes.
 
 	sudo salt-call --local state.apply desktop
 
@@ -493,15 +493,374 @@ Total states run:     3
 Total run time:   5.811 s
 ````
 
-My guess on whyh bash-completion still continued to work was that I had multiple terminals open and the process was still running and thus it never stopped working.  
+My guess on why bash-completion still continued to work was that I had multiple terminals open and the process was still running and thus it never stopped working.  
 
 I took a break @ 15.45 and made a commit.  
 
 ### Blender, Gimp, Python3, Apache2, Pwgen - programs with default settings
 
-### Git, Ufw, SSH - software with custom settings
+These programs were just rinse & repeat of the same general application, so I didn't report on them extensively.  
+
+````
+Summary for local
+------------
+Succeeded: 8 (changed=2)
+Failed:    0
+------------
+Total states run:     8
+Total run time:  24.974 s
+````
+  
+The report concluded that everything went smoothly.  
+
+**I noticed that I didn't actually need custom settings for SSH, so I added it to this list afterwards.**  
+  
+### Git, UFW - software with custom settings
+
+First, I made sure that the installations of these would work and just added those to my state.
+
+	#I tested that by running the state
+	sudo salt-call --local state.apply desktop
+
+````
+Summary for local
+-------------
+Succeeded: 11 (changed=1)
+Failed:     0
+-------------
+Total states run:     11
+Total run time:    6.239 s
+````
+
+Only pkg that was missing, was ufw.
+
+The next thing was to add some settings. Since most settings can be found under /etc, that's where I started to look for them:
+
+	ls /etc/ |grep git
+
+That didn't bring any results, so I figured they must be in my home directory.  
+
+	cd
+	ls -a |grep git
+	micro .gitconfig
+
+Then I just copied my git-settings to my state directory and added those to my sls.init.
+
+	sudo cp .gitconfig /srv/salt/desktop/
+	sudoedit /srv/salt/desktop/init.sls
+	
+````
+/home/kallet/.gitconfig:
+  file.managed:
+    - source: salt://desktop/.gitconfig
+````
+
+Still, everything went smoothly:
+````
+Summary for local
+-------------
+Succeeded: 12
+Failed:     0
+-------------
+Total states run:     12
+Total run time:  150.743 ms
+````
+
+Next I started work with UFW. First I did my settings manually to make sure I knew how to do stuff, before I automated it.  
+
+	sudo apt-get install ufw
+	sudo ufw allow 22
+	sudo ufw enable
+
+These setting would allow SSH traffic and enable the firewall. Next I needed to copy the settings to my state folder.
+
+	sudo cp /etc/ufw/ufw.conf /srv/salt/desktop/
+	
+I added this to the state:
+````
+/etc/ufw/ufw.conf:
+  file.managed:
+    - source: salt://desktop/ufw.conf
+````
+
+The config file had my desired settings, as I had set those in giving my commands. Atleast that was what I had suspected, but the rules were actually in user.rules.
+````
+\### tuple ### allow any 22 0.0.0.0/0 any 0.0.0.0/0 in
+-A ufw-user-input -p tcp --dport 22 -j ACCEPT
+-A ufw-user-input -p udp --dport 22 -j ACCEPT
+````
+
+So I fixed my state accordingly, copied the correct file and deleted the other.  
+
+	sudo cp /etc/ufw/user.rules /srv/salt/desktop/
+	sudoedit /srv/salt/desktop/init.sls
+
+````
+/etc/ufw/user.rules:
+  file.managed:
+    - source: salt://desktop/user.rules
+````
+	
+	sudo salt-call --local state.apply desktop
+
+````
+Summary for local
+-------------
+Succeeded: 13
+Failed:     0
+-------------
+Total states run:     13
+Total run time:  150.759 ms
+````
+
+That worked, so next I made sure that ufw would be enabled:
+
+	sudoedit /srv/salt/desktop/init.sls
+
+````
+Run ufw:
+  cmd.run:
+    - name: ufw enable
+````
+
+Source applied to this: [Saltstack](https://docs.saltproject.io/en/latest/ref/states/all/salt.states.cmd.html).  
+
+I had succeeded in creating a good startup stage for my own use.  
+
+````
+Summary for local
+-------------
+Succeeded: 14 (changed=1)
+Failed:     0
+-------------
+Total states run:     14
+Total run time:  278.713 ms
+````
+
+Last I created a state to make Micro my sudoeditor of choice.
+
+````
+Make micro sudoeditor:
+  cmd.run:
+    - name: export EDITOR="micro"
+````
+
+After all this I made my cmd.run states return True with the stateful attribute.  
+
+I tested if I could have some use out of this by commenting the ufw pkg.installed out and purged ufw:
+
+	sudo apt-get purge ufw
+	sudo ufw status
+
+````
+sudo: ufw: command not found
+````
+
+	sudo salt-call --local state.apply desktop
 
 
+````
+----------
+          ID: Run ufw
+    Function: cmd.run
+        Name: ufw enable
+      Result: False
+     Comment: /bin/bash: line 1: ufw: command not found
+     Started: 19:16:05.400061
+    Duration: 5.186 ms
+     Changes:   
+----------
+          ID: Make micro sudoeditor
+    Function: cmd.run
+        Name: export EDITOR="micro"
+      Result: True
+     Comment: 
+     Started: 19:16:05.405375
+    Duration: 2.977 ms
+     Changes:   
+
+Summary for local
+-------------
+Succeeded: 13 (changed=1)
+Failed:     1
+-------------
+Total states run:     14
+````
+
+[The source](https://docs.saltproject.io/en/latest/ref/states/all/salt.states.cmd.html) says that if stdout is empty, it's assumed to be successfully executed. So that worked fine for ufw and I tested the same for micro in a similar manner.
+
+	sudo apt-get purge -y micro
+	sudo salt-call --local state.apply desktop
+
+````
+----------
+          ID: Make micro sudoeditor
+    Function: cmd.run
+        Name: export EDITOR="micro"
+      Result: True
+     Comment: 
+     Started: 19:36:38.506600
+    Duration: 2.901 ms
+     Changes:   
+
+Summary for local
+-------------
+Succeeded: 12
+Failed:     1
+-------------
+Total states run:     13
+Total run time:  149.044 ms
+kallet@confmansys:~/.config$ micro
+bash: /usr/bin/micro: No such file or directory
+````
+
+That didn't work out for Micro, since export apparently allows you to set editors that don't exist as ECPORT. So next I decided to try out adding a watch if installed to the mix.  
+
+	sudoedit /srv/salt/desktop/init.sls
+
+So, I added these lines:
+````
+Make micro sudoeditor:
+  cmd.run:
+    - name: export EDITOR="micro"
+    - watch:
+      - pkg: micro
+        stateful: True
+````
+
+Then I installed micro and tested it out:
+
+	sudo apt-get install -y micro
+	sudo salt-call --local state.apply desktop
+
+The output remained That didn't actually work, so I uncommented my micro-state from sls.init.  
+
+I made the states again by using cmd.wait:
+````
+ufw enable:
+  cmd.wait:
+    - watch:
+      - pkg: ufw
+
+export EDITOR="micro":
+  cmd.wait:
+    - watch:
+      - pkg: micro
+````
+
+I tried them out and they worked idempotently.  
+
+	sudo apt-get purge -y micro
+
+
+*First run*  
+````
+Summary for local
+-------------
+Succeeded: 15 (changed=2) #micro and EDITOR
+Failed:     0
+-------------
+Total states run:     15
+Total run time:    3.432 s
+
+````
+  
+*Second run*  
+````
+Summary for local
+-------------
+Succeeded: 15
+Failed:     0
+-------------
+Total states run:     15
+Total run time:  155.667 ms
+````
+	
+	sudo apt-get purge -y ufw
+
+*First run*  
+````
+Summary for local
+-------------
+Succeeded: 15 (changed=3)
+Failed:     0
+-------------
+Total states run:     15
+Total run time:    3.579 s
+````  
+
+*Second run*  
+````
+Summary for local
+-------------
+Succeeded: 15
+Failed:     0
+-------------
+Total states run:     15
+Total run time:  155.065 ms
+````
+  
 ## f) Vapaaehtoinen: Laita srv/salt/ gittiin. Tee uusi moduli. Kloonaa varastosi toiselle koneelle (tai poista srv/salt ja palauta se kloonaamalla) ja jatka sillä. / add a Salt state to Git
 
-  
+I navigated myself to my salt state.  
+
+	cd /srv/salt/desktop
+	sudo git init
+	sudo git add .
+	sudo git commit -m "Added initial state for desktop use"
+	sudo git remote add origin git@github.com:kalletolonen/desktop.git
+	sudo git push -u origin master
+
+The last command resulted in a ssh-key error:  
+````
+git@github.com: Permission denied (publickey).
+fatal: Could not read from remote repository.
+
+Please make sure you have the correct access rights
+and the repository exists.
+````
+
+I couldn't get this to work evenhought I made a new ssh key and added it to Github. So, next I removed the .git-directory and renamed my folder:
+
+	sudo rm -r .git
+	cd ..
+	sudo mv desktop/ desktop2
+
+Then I deleted the repo from Github and made it again, but without adding README or licence (this way you can access the instructions):  
+````
+echo "# desktop" >> README.md
+git init
+git add README.md
+git commit -m "first commit"
+git branch -M main
+git remote add origin git@github.com:kalletolonen/desktop.git
+git push -u origin main
+````
+
+I created the folder again:  
+
+	sudo mkdir desktop
+	ls
+	sudo git init
+	sudo cp ../desktop2/* .
+	sudo git branch -M main
+	sudo git remote add origin git@github.com:kalletolonen/desktop.git
+	sudo git add .
+
+````
+git@github.com: Permission denied (publickey).
+fatal: Could not read from remote repository.
+
+Please make sure you have the correct access rights
+and the repository exists.
+````
+
+Still, the problem persisted. I decided to find out if my keys would work in pushing an another repository.
+	
+	cd
+	cd ConfManSystems #my course repo
+	git pull
+	git push
+	
+	
+
