Add more content

--- a/h3.md
+++ b/h3.md
@@ -861,6 +861,114 @@ Still, the problem persisted. I decided to find out if my keys would work in pus
 	cd ConfManSystems #my course repo
 	git pull
 	git push
+	git add .
+	git commit
+	git pull
+	git push
+
+````
+Enumerating objects: 5, done.
+Counting objects: 100% (5/5), done.
+Compressing objects: 100% (3/3), done.
+Writing objects: 100% (3/3), 3.00 KiB | 3.00 MiB/s, done.
+Total 3 (delta 2), reused 0 (delta 0), pack-reused 0
+remote: Resolving deltas: 100% (2/2), completed with 2 local objects.
+To github.com:kalletolonen/ConfManSystems.git
+   70a1218..ccd6a06  main -> main
+````
+
+That worked fine, so I figured it must have something to do with having to do stuff as a root user - maybe the ssh-keys were different with a root account? To test this, I generated new ssh-keys as a sudo user.
+
+	sudo ssh-keygen
+	sudo cat /root/.ssh/id_rsa.pub
+
+That didn't work either, as my push attempt still had a cryptic error:
+````
+allet@confmansys:/srv/salt/desktop$ sudo git push --set-upstream origin master
+error: src refspec master does not match any
+error: failed to push some refs to 'github.com:kalletolonen/desktop.git'
+````
+
+Next, I just decided to try out pushing the same stuff as a regular user from my home directory:	
+	sudo cp -r /srv/salt/desktop2 /home/kallet/
+	mv /home/kallet/desktop2/ /home/kallet/desktop
+	cd
+	cd desktop
+	git init
+
+````
+/home/kallet/desktop/.git: Permission denied
+````
+
+	ls -ld
+
+````
+kallet@confmansys:~/desktop$ ls -l
+total 12
+-rw-r--r-- 1 root root  636 16. 4. 20:45 init.sls
+-rw-r--r-- 1 root root   25 16. 4. 20:45 settings.json
+-rw-r----- 1 root root 1416 16. 4. 20:45 user.rules
+````
+
+So, I needed to: a) change the usage rights b) use git as root. I thought that this would present a problem - if I made changes to the files user rights, they would follow the files and propably cause problems down the line when trying to execute them later. So, I decided to try adding them as root from here and see what would happen with my push dilemma.  
+
+	 sudo git init
+	 sudo git add .
+	 sudo git commit -m "Initial commit"
+	 sudo git remote add origin git@github.com:kalletolonen/desktop.git
+	 sudo git branch -M main
+	 sudo git push -u origin main
+
+````
+kallet@confmansys:~/desktop$ git push -u origin main
+Enumerating objects: 6, done.
+Counting objects: 100% (6/6), done.
+Compressing objects: 100% (5/5), done.
+Writing objects: 100% (6/6), 1.03 KiB | 1.03 MiB/s, done.
+Total 6 (delta 0), reused 0 (delta 0), pack-reused 0
+To github.com:kalletolonen/desktop.git
+ * [new branch]      main -> main
+error: could not lock config file .git/config: Permission denied
+error: Unable to write upstream branch configuration
+hint: 
+hint: After fixing the error cause you may try to fix up
+hint: the remote tracking information by invoking
+hint: "git branch --set-upstream-to=origin/main".
+error: update_ref failed for ref 'refs/remotes/origin/main': cannot lock ref 'refs/remotes/origin/main': unable to create directory for .git/refs/remotes/origin/main
+kallet@confmansys:~/desktop$ sudo git push -u origin main
+Branch 'main' set up to track remote branch 'main' from 'origin'.
+Everything up-to-date
+````
+  
+That workflow worked, so I decided to try it out again in the salt state folder to a new github repository:  
+
+	cd /srv/salt/
+	sudo rm -r desktop2
+	cp desktop desktop2
+	cd desktop2
+	sudo rm -r .git
+	sudo git init
+	sudo git add .
+	sudo git commit -m "Initial commit"
+	sudo git remote add origin git@github.com:kalletolonen/desktop2.git
+	sudo git branch -M main
+	sudo git push -u origin main
+
+````
+kallet@confmansys:/srv/salt/desktop2$ sudo git push -u origin main
+Enumerating objects: 5, done.
+Counting objects: 100% (5/5), done.
+Compressing objects: 100% (4/4), done.
+Writing objects: 100% (5/5), 958 bytes | 958.00 KiB/s, done.
+Total 5 (delta 0), reused 0 (delta 0), pack-reused 0
+To github.com:kalletolonen/desktop2.git
+ * [new branch]      main -> main
+Branch 'main' set up to track remote branch 'main' from 'origin'.
+````
+
+That worked too, so I had made a mistake earlier. Looking back I missed the "sudo branch - M main"-commmand, Next I deleted the redundant repository from my Debian and Github. I wanted to try out the installation on a fresh machine, so I started an empty Debian virtual machine for the next stage.
+
 	
+
 	
 
