Add text & photos

--- a/h3.md
+++ b/h3.md
@@ -967,6 +967,151 @@ Branch 'main' set up to track remote branch 'main' from 'origin'.
 ````
 
 That worked too, so I had made a mistake earlier. Looking back I missed the "sudo branch - M main"-commmand, Next I deleted the redundant repository from my Debian and Github. I wanted to try out the installation on a fresh machine, so I started an empty Debian virtual machine for the next stage.
+  
+First I realized that I needed to install Salt and Git:
+	
+	sudo apt-get update
+	sudo apt-get upgrade
+	sudo apt-get install -y git
+	sudo apt-get install -y salt-master salt-minion
+	
+After that I started the master.	
+	
+	sudo systemctl start salt-master.service
+	
+I soon realized that that didn't create a salt folder in /srv, so I needed to initiate the slave too to run this locally.  
+  
+![Pic 3. No folder in /srv](pics/h3/3.png)  
+*No folder existed*
+  
+So, next I had to create the minion's config:
+	
+	hostname -I
+
+![Pic 4. Added the master's address](pics/h3/4.png)  
+*The master's address was added*  
+	
+	sudo systemctl restart salt-minion
+	sudo systemctl restart salt-master.service
+	sudo salt-key
+	sudo salt-key -a *
+	sudo salt-key
+	
+![Pic 5. Key was accepted](pics/h3/5.png)  
+*Key was accepted*  
+	
+	sudo salt 'confmansys' test.ping
+	
+````
+confmansys:
+    True
+````
+
+Still, no salt-directory, so I figured that I might have created it myself and omitted it from my reports. Still, I wanted to check if running a cli-state would create the directory. 
+	
+	sudo salt * state.single pkg.installed micro
+	ls
+	
+![Pic 6. No directory still](pics/h3/6.png)  
+*No directory*  
+  
+That said to me, that I had propably just created the directory and omitted it from my reports.
+	
+	sudo mkdir /srv/salt
+	cd /srv/salt
+	sudo git clone git@github.com:kalletolonen/desktop.git
+	
+Not exactly handy - I couldn't clone without ssh keys:
+````
+git@github.com: Permission denied (publickey).
+fatal: Could not read from remote repository.
+
+Please make sure you have the correct access rights
+and the repository exists.
+````
+
+So, I needed to install Salt, Git and SSH to clone a single repo with Salt. 
+	
+	sudo apt-get install ssh
+	ssh-keygen
+	
+I collected my new puiblic key and pasted it to Github.
+  
+Cloning direcly to the /srv/salt/-folder didn't work, but it worked for my home dir. Maybe that was a problem with running the keygen as a normal user and not root?
+  
+Then I copied my repository from my home-directory to the proper location and tried it out:  
+	
+	sudo cp -r desktop/ /srv/salt/
+	
+I had 0 ideas on how to debug this.  
+  
+````
+kallet@confmansys:~$ sudo salt-call --local state.apply desktop
+[ERROR   ] Parent directory not present
+^C
+Exiting gracefully on Ctrl-c
+````
+  
+Googling hinted on a possible user rights-problem, but nothing definitive, so I decided to try running it on my local minion instead of --local:
+	
+	sudo salt '*' state.apply desktop
+	
+````
+confmansys:
+----------
+          ID: micro
+    Function: pkg.installed
+      Result: True
+     Comment: All specified packages are already installed
+     Started: 22:00:13.590210
+    Duration: 47.421 ms
+     Changes:   
+----------
+          ID: /home/kallet/.config/micro/settings.json
+    Function: file.managed
+      Result: False
+     Comment: Parent directory not present
+     Started: 22:00:13.639714
+    Duration: 14.638 ms
+     Changes:   
+----------
+````
+  
+This made me realize that I had just been impatient and that Micro didn't have a config directory, as it has never been used and thus it hasn't created it. So I made an adaptation to my init.sls:
+	
+````
+/home/kallet/.config/micro/:
+  file.directory
+````
+  
+I ran my state a few times, and it returned values that were expected:  
+````
+Summary for local
+-------------
+Succeeded: 16
+Failed:     0
+-------------
+Total states run:     16
+Total run time:  150.092 ms
+````
+  
+After that I updated my state to my repo:
+	
+	cd /srv/salt/desktop/
+	sudo ssh-keygen # -> pasted to Github
+	sudo git pull
+	sudo git push
+	sudo commit
+	sudo git pull
+	sudo git push
+	
+![Pic 7. Updated a salt state repo](pics/h3/7.png)  
+*Succesfully updated the repository*  
+
+	
+
+
+	
 
 	
 
