Add a final note to the end

--- a/h3.md
+++ b/h3.md
@@ -1109,7 +1109,10 @@ After that I updated my state to my repo:
 *Succesfully updated the repository*  
   
 Stopped work @ 22.24.
-
+  
+**UPDATE**  
+  
+I tested my state some more and realized, that the command for sudoeditor's change doesn't do anything.
 	
 
 
