Add more content

--- a/h4.md
+++ b/h4.md
@@ -96,7 +96,7 @@ After that I needed to generate a new public SSH-key for my new machine and add 
 ![Pic 1. Added the key to Github](pics/h4/1.png)  
 **The key was added: settings -> SSH/GPG Keys**
 
-The I cloned my repo that contained my state (while in my home directory).  	
+Then I cloned my repo that contained my state (while in my home directory).  	
 	git clone git@github.com:kalletolonen/desktop.git
 
 That resulted in an error message.
@@ -116,10 +116,155 @@ Next I pasted my public key again just to be sure I had pasted it correctly and 
 
 The same error persisted and I quit work @ 18.59.
 
-	
+I started @ around 9.15.
+
+I managed to clone the repository with https.
+
+	git clone https://github.com/kalletolonen/desktop.git
+
+Next I made a directory for my state.
+
+	sudo systemctl start salt-master
+	sudo mkdir /srv/salt
+	sudo mkdir /srv/salt/desktop
+	sudo cp * /srv/salt/desktop/
+
+After that I executed my state
+
+	sudo salt-call --local state.apply desktop
+
+I had an error message about my .gitconfig-file
+
+```
+          ID: /home/kallet/.gitconfig
+    Function: file.managed
+      Result: False
+     Comment: Source file salt://desktop/.gitconfig not found in saltenv 'base'
+     Started: 09:28:28.660167
+    Duration: 1.28 ms
+     Changes:   
+```
+
+I think that must have just forgotted to add that to my repository, so I did just that on the computer that had the correct .gitconfig.
+
+	sudo find -iname ".gitconfig" |grep git
+
+```
+./srv/salt/desktop/.gitconfig
+./var/cache/salt/minion/files/base/desktop/.gitconfig
+./home/kallet/desktop/.gitconfig
+./home/kallet/.gitconfig
+```
+
+The printout told me 2 things:
+
+	1. I had the correct file in my repository's directory
+	2. Git might not allow to sync it's own settings files
+
+I wanted to find out which it was, so I tried to push and pull the repo.
+
+	cd
+	cd desktop
+	git pull
+	git push
+
+```
+Already up to date.
+kallet@confmansys:~/desktop$ git push
+Everything up-to-date
+kallet@confmansys:~/desktop$ ls -a
+.  ..  .git  .gitconfig  init.sls  settings.json  user.rules
+
+```
+
+That would indicate that Git doesn't want to sync dotfiles. That turned out to be wrong, as I checked my new machine's directory's contents.
+
+	ls -a
+
+```
+.  ..  .git  .gitconfig  init.sls  settings.json  user.rules
+kallet@confmansys:~/desktop/desktop$ cat .gitconfig 
+[user]
+	email = kalle.tolonen@gmail.com
+	name = Kalle Tolonen
+```
+
+So the next logical thing was to check if my state directory had the file in question, and sure enough, it didn't.
+
+	ls -a /srv/salt/desktop/
+
+```
+kallet@confmansys:~/desktop/desktop$ ls -a /srv/salt/desktop/
+.  ..  init.sls  settings.json  user.rules
+```
+
+So my mistake was using the *-parameter with cp, as it clearly doesn't copy dotfiles. Some [googling](https://superuser.com/questions/61611/how-to-copy-with-cp-to-include-hidden-files-and-hidden-directories-and-their-con) later I decided to try out copying with the recursive flag.
+
+	sudo cp -r . /srv/salt/desktop/
+
+```
+kallet@confmansys:~/desktop/desktop$ ls -a /srv/salt/desktop/
+.  ..  .git  .gitconfig  init.sls  settings.json  user.rules
+```
+
+After that I ran the state again.
+
+```
+Summary for local #1st run
+-------------
+Succeeded: 15 (changed=1)
+Failed:     0
+-------------
+Total states run:     15
+Total run time:  177.098 ms
+```
+
+``` 
+Summary for local #2nd run
+-------------
+Succeeded: 15
+Failed:     0
+-------------
+Total states run:     15
+Total run time:  156.855 ms
+```
+
+That was the scope of the assingment, but I wanted to test out if I could push some changes to my repository, since it's quite important to be able to edit and push stuff on multiple computers. To do that I deleted my https-downloaded repo and started over.
+
+	sudo rm -r desktop
+	ssh-keygen
+	#pasted the key to Github
+	#deleted the old SSH-key that had an identical "kallet@confmansys"-id
+	git clone git@github.com:kalletolonen/desktop.git
+
+That worked as it should've, so you should never use cloned virtual machines and same username/hostname combos with SSH and Git to avoid this problem.
+
+```
+Cloning into 'desktop'...
+Warning: Permanently added the ECDSA host key for IP address '140.82.121.3' to the list of known hosts.
+remote: Enumerating objects: 27, done.
+remote: Counting objects: 100% (27/27), done.
+remote: Compressing objects: 100% (20/20), done.
+Receiving objects: 100% (27/27), done.
+Resolving deltas: 100% (13/13), done.
+remote: Total 27 (delta 13), reused 20 (delta 6), pack-reused 0
+```
+
+I stopped work @ 10.18.
+
+## b) CSI Pasila. Tiedostoista saa aikajanan 'cd /etc/; sudo find -printf '%T+ %p\n'|sort|tail'. / Using Find
 
 
-## b) CSI Pasila. Tiedostoista saa aikajanan 'cd /etc/; sudo find -printf '%T+ %p\n'|sort|tail'.
+###  Anna esimerkki aikajanasta / Provide an example of timeline
+
+ Selitä jokainen kohta komennosta, jolla aikajana tehdään. Vinkki: '%T+' löytyy 'man find' kohdasta printf.
+
+ Aja jokin komento, joka muuttaa järjestelmän yhteisiä asetustiedostoja
+
+ Ota uusi aikajana ja etsi muutos sieltä
+
+ Onko samalla hetkellä muutettu yhtä vai useampaa tiedostoa?
+
 
 ## c) Tiedän mitä teit viime kesän^H^H^H komennolla. Säädä jotain ohjelmaa ja etsi sen muuttamat tiedostot aikajanasta. Tee sitten tästä oma Saltin tila.
 
