--- a/h4.md
+++ b/h4.md
@@ -94,7 +94,7 @@ After that I needed to generate a new public SSH-key for my new machine and add 
 	ssh-keygen
 
 ![Pic 1. Added the key to Github](pics/h4/1.png)  
-**The key was added: settings -> SSH/GPG Keys**
+*The key was added: settings -> SSH/GPG Keys*
 
 Then I cloned my repo that contained my state (while in my home directory).  	
 	git clone git@github.com:kalletolonen/desktop.git
@@ -158,8 +158,8 @@ I think that must have just forgotted to add that to my repository, so I did jus
 
 The printout told me 2 things:
 
-	1. I had the correct file in my repository's directory
-	2. Git might not allow to sync it's own settings files
+1. I had the correct file in my repository's directory
+2. Git might not allow to sync it's own settings files?
 
 I wanted to find out which it was, so I tried to push and pull the repo.
 
