Add more text to article and pictures.

--- a/h4.md
+++ b/h4.md
@@ -593,3 +593,146 @@ diff -d /home/kallet/.config/vlc/vlc-qt-interface.conf /home/kallet/.config/vlc/
 That demostrated to me that the fault wasn't with diff.
 
 I ended the day @ 15.55
+
+The next day I started work @ 13.20
+
+My next guess was that VLC might save the settings only on program exit, so I closed it to see what would happen. There was still no diff in the 2 confs, so I must have selected the wrong configuration file to look at.
+
+	sudo find -printf '%T+ %p\n'|sort|grep vlc
+
+```
+2022-04-24+13:20:47.0709286690 ./home/kallet/.config/vlc/vlc-qt-interface.conf
+2022-04-24+13:20:47.1029446690 ./home/kallet/.config/vlc/vlcrc
+2022-04-24+13:20:47.1029446690 ./home/kallet/.local/share/vlc
+2022-04-24+13:20:47.1029446690 ./home/kallet/.local/share/vlc/ml.xspf
+2022-04-24+13:20:47.1109486690 ./home/kallet/.config/vlc
+```
+
+The timestamps hinted at some other possibilities, so I investigated them.
+	cat /home/kallet/.config/vlc/vlcrc |grep minimal
+		
+```
+# Start in minimal view (without menus) (boolean)
+qt-minimal-view=1
+```
+
+This seemed like a good candidate, so I changed the setting to 0  and started VLC. 
+
+![Pic 3. VLC in normal mode](pics/h4/3.png)  
+*VLC started in normal view*  
+
+Next I copied the config file to a new Salt directory (and changed the boolean to before that).
+
+	sudo mkdir /srv/salt/vlc
+	sudo cp /home/kallet/.config/vlc/vlcrc /srv/salt/vlc/
+	sudo micro /srv/salt/vlc/init.sl
+
+I stated that I want pkg VLC installed.
+
+```SaltStack
+vlc:
+  pkg.installed
+```
+
+Then I tested my state.
+
+	sudo salt-call --local state.apply vlc
+
+```
+local:
+----------
+          ID: vlc
+    Function: pkg.installed
+      Result: True
+     Comment: All specified packages are already installed
+     Started: 13:42:58.680682
+    Duration: 53.428 ms
+     Changes:   
+
+Summary for local
+------------
+Succeeded: 1
+Failed:    0
+------------
+Total states run:     1
+Total run time:  53.428 ms
+```
+
+Since that worked, I proceeded to add code for moving the configuration file.
+
+	sudo micro /srv/salt/vlc/init.sl
+
+```SaltStack
+vlc:
+  pkg.installed
+
+/home/kallet/.config/vlc/vlcrc:
+  file.managed:
+    - source: salt://vlc/vlcrc
+```
+
+The state worked fine, but to test it properly, I purged VLC and executed the VLC-state.
+
+	sudo apt-get purge -y vlc*
+	sudo salt-call --local state.apply vlc
+
+```
+Summary for local
+------------
+Succeeded: 2 (changed=1)
+Failed:    0
+------------
+Total states run:     2
+Total run time:   4.690 s
+```
+
+This told me that the settings were still present at my home directory, so I removed them, purged vlc and ran the state again.
+
+	rm -r .config/vlc/
+	sudo apt-get purge -y vlc
+	sudo salt-call --local state.apply vlc
+
+```
+---------
+          ID: /home/kallet/.config/vlc/vlcrc
+    Function: file.managed
+      Result: False
+     Comment: Parent directory not present
+     Started: 13:53:56.294232
+    Duration: 20.868 ms
+     Changes:   
+```
+
+This error message told me that VLC doesn't generate a settings directory at install, so I added that generation to my state.
+
+	sudo micro /srv/salt/vlc/init.sls
+
+```SaltStack
+vlc:
+  pkg.installed
+
+/home/kallet/.config/vlc:
+  file.directory
+
+/home/kallet/.config/vlc/vlcrc:
+  file.managed:
+    - source: salt://vlc/vlcrc
+```
+The altered state worked great.
+
+```
+Summary for local
+------------
+Succeeded: 3 (changed=2)
+Failed:    0
+------------
+Total states run:     3
+Total run time:  75.675 ms
+```
+
+As a final test I started VLC.
+
+![Pic 4. VLC in minimal view](pics/h4/4.png)  
+*VLC started in minimal view*  
+
+That was it and I quit @ 14.01.
