--- a/h4.md
+++ b/h4.md
@@ -18,16 +18,16 @@ I already did this exercise in my [previous article](https://github.com/kalletol
 
 ### Installed programs
 
-	- Micro
-	- bash-completion
-	- Gimp
-	- Blender
-	- Python3
-	- Apache2
-	- Pwgen
-	- SSH
-	- Git
-	- Ufw
+- Micro
+- bash-completion
+- Gimp
+- Blender
+- Python3
+- Apache2
+- Pwgen
+- SSH
+- Git
+- Ufw
 
 **The state**
 
@@ -330,9 +330,9 @@ The printout suggested a fresh timestamp on my settings. The command had changed
 
 	sudo cat ./ufw/user6.rules |grep 80
 
-The printout was the same. I had no idea why ufw needed 2 diffent files for it's settings. I did some [searching](https://wiki.ubuntu.com/UncomplicatedFirewall) and I think that maybe it's because the rule was added via command line input:
+The printout was the same. I had no idea why ufw needed 2 diffent files for it's settings. I did some [searching](https://wiki.ubuntu.com/UncomplicatedFirewall) and I thought that maybe it's because the rule was added via command line input:
 
-*/var/lib/ufw/user[6].rules or /lib/ufw/user[6].rules (0.28 and later): rules added via the ufw command (should not normally be edited by hand) *  
+*/var/lib/ufw/user[6].rules or /lib/ufw/user[6].rules (0.28 and later): rules added via the ufw command (should not normally be edited by hand)*  
 
 To try this out, I deleted the settings and executed my salt state once more and checked the situation with find. 
 
@@ -402,12 +402,13 @@ I decided to update my Micro settings. First I needed to change some settings to
 	set tabstospaces off
 	set ftoptions off
 
-![Pic 2. Micro's error message](pics/h4/2.png)
+![Pic 2. Micro's error message](pics/h4/2.png)  
 *Micro gave an error message*
 
 That told me that I had something screwed up in my micro settings already, since they were copied from somewhere else and had the wrong user rights.
+	
 	ls -l .config/micro/settings.json
-
+	
 ```
 -rw-r--r-- 1 root root 77 23. 4. 09:27 .config/micro/settings.json
 ```
