Add more content.

--- a/h5.md
+++ b/h5.md
@@ -517,12 +517,288 @@ uname -a
 ![Pic 3. Weather, date, network & hw](pics/h5/3.png)  
 *My prinout looked reasonably good*  
 
-I quit for the day @ 17.05.
+I quit @ 17.05.
 
-	
+Resumed work @ 18.48.
+
+Next it was time to rinse & repeat the previous part of this exercise and move the file to the right directory, make a Salt state for it with proper user rights and test it out.
+
+	sudo cp hello /usr/local/bin/
+	sudo chmod ugo+x hello /usr/local/bin/hello
+	hello
+
+![Pic 4. Working shell script](pics/h5/4.png)  
+*The script worked as intended*  
+
+Next, I made a directory for the Salt state and the state itself.
+
+	sudo mkdir /srv/salt/hello/
+	sudo cp hello /srv/salt/hello/
+	sudo micro /srv/salt/hello/init.sls
+
+```SaltStack
+/usr/local/bin/hello:
+  file.managed:
+    - source: salt://hello/hello
+    - user: root
+    - group: root
+    - mode: 755
+```
+
+For the test I removed the manually added file, executed my state 2 times and then executed my command.
+
+	sudo rm /usr/local/bin/hello
+	sudo salt '*' state.apply hello #this twice
+
+```
+confmansys:
+----------
+          ID: /usr/local/bin/hello
+    Function: file.managed
+      Result: True
+     Comment: File /usr/local/bin/hello is in the correct state
+     Started: 19:02:49.154489
+    Duration: 20.041 ms
+     Changes:   
+
+Summary for confmansys
+------------
+Succeeded: 1
+Failed:    0
+------------
+Total states run:     1
+Total run time:  20.041 ms
+```
+
+
+	hello
+
+![Pic 5. Immaculate print of Turku's weather](pics/h5/5.png)  
+*It's always sunny in Turku*  
+
 ## c) c) hello.py. Tee järjestelmään uusi komento Pythonilla ja asenna se orjille. Vinkkejä: Hei maailma riittää, mutta propellihatut saavat toki koodaillakin. Shebang on "#!/usr/bin/python3". Helpoin Python-komento on: print("Hei Tero!") / Make a Python command for minions
 
+Python3 comes with Debian, so I didn't have to install that. I checked the location for Python to include in my shebang-magic.
+
+	which python3
+	micro happiness
+
+```python
+#!/usr/bin/python3
+
+answer = input("Do you have a problem (y/n)? ")
+
+if answer == "y":
+    canYouAct = input("Can you do anything about it (y/n)? ")
+    if canYouAct == "n":
+        print("Don't worry, be happy!")
+    else:
+        print("Go fix your problem!")
+else:
+    print("Good for you!")
+```
+
+Then it was just a question of copy & paste from above.
+
+	sudo cp happiness /usr/local/bin/
+	sudo chmod ugo+x /usr/local/bin/happiness
+
+```
+kallet@confmansys:~$ happiness 
+Do you have a problem (y/n)? n
+Good for you!
+```
+
+After this I did a directory for Salt, a state in the directory, copied my program to the Salt master's file server location, deleted the manually inserted file and executed the state 2 times & tested the outcome.
+
+	sudo mkdir /srv/salt/happy
+	sudo cp happiness /srv/salt/happy/
+	sudo micro /srv/salt/happy/init.sls
+
+```SaltStack
+/usr/local/bin/happiness:
+  file.managed:
+    - source: salt://happy/happiness
+    - user: root
+    - group: root
+    - mode: 755
+```
+
+	sudo rm /usr/local/bin/happiness
+	sudo salt '*' state.apply happy
+	happiness
+
+![Pic 6. Python program for slaves](pics/h5/6.png)  
+*My slave was gifted with happiness*  
+
 ## d) Laiskaa skriptailua. Tee kansio, josta jokainen skripti kopioituu orjille. Vinkki: 'salt-call --local sys.state_doc file.recurse'. Kun tämä on valmis, on todella helppoa laittaa orjille mikä tahansa yhden tiedoston shell script, Python-ohjelma, Perl-ohjelma, Go-binääri tai muu yhden binäärin ohjelma. / Make a folder containing your scripts and copy those to minions
+
+I started my looking into the documentation.
+
+	sudo salt-call --local sys.state_doc file.recurse
+
+I decided to try out and modify an example code for my purposes.
+
+```SaltStack
+/srv/stuff/substuf:
+              file.directory:
+                - user: fred
+                - group: users
+                - mode: 755
+                - makedirs: True
+                - recurse:
+                  - user
+                  - group
+                  - mode
+```
+
+	sudo mkdir /srv/salt/scriptfolder
+	sudo mkdir /srv/salt/scriptfolder/scripts
+	sudo micro /srv/salt/scriptfolder/init.sls
+	sudo cp happiness hello helloworld /srv/salt/scriptfolder/scripts/
+
+```
+/usr/local/bin:
+  file.managed:
+    - source: salt://scriptfolder/scripts
+    - user: root
+    - group: root
+    - mode: 755
+    - recurse:
+      - user
+      - group
+      - mode
+```
+
+I could already see from the looks of it that this wouldn't work, but I just wanted to see the error message. 
+	
+```
+confmansys:
+----------
+          ID: /usr/local/bin
+    Function: file.managed
+      Result: False
+     Comment: Specified target /usr/local/bin is a directory
+     Started: 19:38:31.532033
+    Duration: 6.084 ms
+     Changes:   
+```
+
+I changed the function to file.recurse and tried again.
+
+```
+confmansys:
+----------
+          ID: /usr/local/bin
+    Function: file.recurse
+      Result: False
+     Comment: 'mode' is not allowed in 'file.recurse'. Please use 'file_mode' and 'dir_mode'.
+     Started: 19:39:55.128912
+    Duration: 1.855 ms
+     Changes:   
+```
+
+Next I tried it out without the mode to see what would happen.
+
+```
+Summary for confmansys
+------------
+Succeeded: 1
+Failed:    0
+------------
+Total states run:     1
+Total run time:  45.668 ms
+```
+
+```SaltStack
+#My new state
+/usr/local/bin:
+  file.recurse:
+    - source: salt://scriptfolder/scripts
+    - user: root
+    - group: root
+    - recurse:
+      - user
+      - group
+```
+
+That worked out, so I needed to figure the user rights out. I don't understand the benefit of the change in function name for individual files or many files, but the earlier error message told me a solution.
+
+```SaltStack
+/usr/local/bin:
+  file.recurse:
+    - source: salt://scriptfolder/scripts
+    - user: root
+    - group: root
+    - file_mode: 755 #changed this line from "- file: 755"
+    - recurse:
+      - user
+      - group
+      - mode
+```
+
+To properly test this out, I removed the files from /usr/local/bin, executed my state 2 times and my scripts after that.
+
+	sudo rm /usr/local/bin/*
+	sudo salt '*' state.apply scriptfolder
+
+```
+     Changes:   
+              ----------
+              /usr/local/bin/happiness:
+                  ----------
+                  diff:
+                      New file
+                  mode:
+                      0755
+              /usr/local/bin/hello:
+                  ----------
+                  diff:
+                      New file
+                  mode:
+                      0755
+              /usr/local/bin/helloworld:
+                  ----------
+                  diff:
+                      New file
+                  mode:
+                      0755
+
+Summary for confmansys
+------------
+Succeeded: 1 (changed=1)
+Failed:    0
+------------
+Total states run:     1
+Total run time:  82.894 ms
+```
+
+	sudo salt '*' state.apply scriptfolder
+
+```
+Summary for confmansys
+------------
+Succeeded: 1
+Failed:    0
+------------
+Total states run:     1
+Total run time:  33.699 ms
+```
+
+![pic 7. Scripts executed great](pics/h5/1.png)  
+*The scripts executed great*  
+
+As a final check, I listed the user rights for my scripts.
+
+```
+kallet@confmansys:~$ ls -l /usr/local/bin/
+total 12
+-rwxr-xr-x 1 root root 295 29. 4. 19:47 happiness
+-rwxr-xr-x 1 root root  78 29. 4. 19:47 hello
+-rwxr-xr-x 1 root root  37 29. 4. 19:47 helloworld
+```
+
+I quit for the night @ 19.52.
 
 ## e) Intel. Etsi kolme loppuprojektia joltain vanhalta kurssitoteutukselta. Kuvaile projektit tiiviisti ja linkitä alkuperäiseeen raporttin. Vinkkejä: Loppuprojekteja löydät etsimällä opiskelijoiden raportteja vanhoilta kursseilta ja selailemalla sivuja, joilta ne löytyivät. Raportteja löytyy vanhojen kurssitotetusten kommenteista. Ja tietysti kannattaa silmäillä listaa sieltä täältä, niin näet eri projektit kuin muut. Voi hakea myös Googlella ja DuckDuckGolla. / Read and review 3 old projects of this course
 
